--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
   </div>
   
   <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
-  <table class="panel-table">
+  <table class="panel-tablerow2">
     <tbody><tr><th><div class="t6head"> Access Points <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div></th></tr>     
     <tr class="panelbody"><td>  </td></tr>     
       
@@ -142,7 +142,7 @@
   </div>
   
   <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
-  <table class="panel-table">
+  <table class="panel-tablerow2">
     <tbody><tr><th> <div class="t7head"> Event Severities<span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div> </div> </th></tr>      
     <tr class="panelbody"><td> <div>  </div></td></tr>      
         
