--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,56 @@
           pieHole: 0.4,
         };
 
-        var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
+        var chart = new google.visualization.PieChart(document.getElementById('alerts'));
+        chart.draw(data, options);
+      }
+    </script>
+
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7]
+        ]);
+
+        var options = {
+          title: 'My Daily Activities',
+          pieHole: 0.4,
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('access points'));
+        chart.draw(data, options);
+      }
+    </script>
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['bar']});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'Sales', 'Expenses', 'Profit'],
+          ['2014', 1000, 400, 200],
+          ['2015', 1170, 460, 250],
+          ['2016', 660, 1120, 300],
+          ['2017', 1030, 540, 350]
+        ]);
+
+        var options = {
+          chart: {
+            title: 'Company Performance',
+            subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+          }
+        };
+
+        var chart = new google.charts.Bar(document.getElementById('columnchart_material'));
+
         chart.draw(data, options);
       }
     </script>
@@ -116,82 +165,87 @@
       <!-- your page content -->
       <h1> Dashboard </h1>
 
-</div>
+    </div>
 
-<div class="container">
+    <div class="container">
 
-  <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
-  <table class="table1 panel-table">
-    <tbody><tr><th><div> 
-      Systems Online </br>
-      avg    
-     <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span> </th></tr></div>
-  </tbody></table>
-  </div>
+      <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
+        <table class="table1 panel-table">
+          <tbody><tr><th><div> 
+            Systems Online </br>
+            avg    
+            <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span> </th></tr></div>
+          </tbody></table>
+      </div>
   
-  <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
-  <table class="table2 panel-table">
-    <tbody><tr><th><div> 
-     Access Points in last 60 min </br>
-     avg    
-     <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span> </th></tr></div>
-  </tbody></table>
-  </div>
+      <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
+        <table class="table2 panel-table">
+          <tbody><tr><th><div> 
+            Access Points in last 60 min </br>
+            avg    
+            <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span> </th></tr></div>
+          </tbody>
+        </table>
+      </div>
   
-  <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
-  <table class="table3 panel-table">
-    <tbody><tr><th><div> 
-    Clients in last 60 min </br>
-    avg    
-     <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span> </th></tr></div>
-  </tbody></table>
-  </div>
-  
-  <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
-  <table class="table4 panel-table">
-    <tbody><tr><th> <div> <script> document.write(new Date().toLocaleDateString()); </script> <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span></div> </th></tr>      
-     
-  </tbody></table>
-  </div>
-  
-  <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
-  <table class="panel-tablerow2">
-    <tbody><tr><th> <div class="t5head"> Clients <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div> </th></tr>      
-    <tr class="panelbody"><td> <div></div></td></tr>          
-  </tbody></table>
-  </div>
-  
-  <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
-  <table class="panel-tablerow2">
-    <tbody><tr><th><div class="t6head"> Access Points <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div></th></tr>     
-    <tr class="panelbody"><td>  </td></tr>     
-      
-  </tbody></table>
-  </div>
-  
-  <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
-  <table class="panel-tablerow2">
-    <tbody><tr><th> <div class="t7head"> Event Severities<span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div> </div> </th></tr>      
-    <tr class="panelbody"><td> <div>  </div></td></tr>      
-        
-  </tbody></table>
-  </div>
-  
-    <div class="panel-table-container col-lg-12 col-md-12 col-sm-12">
-  <table class="panel-table">
-    <tbody><tr><th> <div class="t8head"> Access Points </div> </th></tr>      
-    <tr class="panelbody"><td> <div></div></td></tr>     
-         
-  </tbody></table>
-  </div>
-  
-</div>
+      <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
+        <table class="table3 panel-table">
+          <tbody><tr><th><div> 
+            Clients in last 60 min </br>
+            avg    
+            <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span> </th></tr></div>
+          </tbody>
+        </table>
+      </div>
 
-</div>
+ 
+      <div class="panel-table-container col-lg-3 col-md-3 col-sm-3">
+        <table class="table4 panel-table">
+          <tbody><tr><th> <div> <script> document.write(new Date().toLocaleDateString()); </script> <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span></div> </th></tr>
+          </tbody>
+        </table>
+      </div>
+  
+      <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
+        <table class="panel-tablerow2">
+          <tbody><tr><th> <div class="t5head"> Clients <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div> </th></tr>      
+          <tr class=" alerts panelbody"><td> 
+            <div class="alerts" id="alerts"></div></td></tr>          
+          </tbody>
+        </table>
+      </div>
+  
+      <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
+        <table class="panel-tablerow2">
+          <tbody><tr><th><div class="t6head"> Access Points <span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div></th></tr>     
+            <tr class="alerts panelbody"><td> <div class="alerts" id="access points"></div> </td></tr>     
+          </tbody>
+        </table>
+      </div>
+  
+      <div class="panel-table-container col-lg-4 col-md-4 col-sm-4">
+        <table class="panel-tablerow2">
+          <tbody><tr><th> <div class="t7head"> Event Severities<span class="gpanel glyphicon glyphicon-refresh" aria-hidden="true"></span><span class="gpanelrem glyphicon glyphicon-remove" aria-hidden="true"></span><span class="gpaneldown glyphicon glyphicon-chevron-down" aria-hidden="true"></span></div> </div> </th></tr>      
+            <tr class="panelbody"><td> <div class="alerts" id="columnchart_material"></div></td></tr>      
+          </tbody>
+        </table>
+      </div>
+  
+      <div class="panel-table-container col-lg-12 col-md-12 col-sm-12">
+        <table class="panel-table">
+          <tbody><tr><th> <div class="t8head"> Access Points </div> </th></tr>      
+            <tr class="panelbody"><td> <div></div></td></tr>     
+          </tbody>
+        </table>
+      </div>
+  
+    </div>
+
+  </div>
 
 {%endblock %}
 
-<div id="donutchart" style="width: 900px; height: 500px;"></div>
+
 {%endblock %}
 
 
